# amocrm-task

./: .env  .env.example  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  pytest.ini
amocrm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
monitor/: incident.py  models.py  poll.py  tasks.py  tests.py  views.py
monitor/management/commands/: seed.py
mysql/: grant-privileges.sql
web/: app.js  index.html  style.css
