[project]
name = "amocrm-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "celery>=5.5.3",
    "django>=5.2.3",
    "django-environ>=0.12.0",
    "faker>=37.4.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mysqlclient>=2.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-django>=4.5.0",
    "redis>=6.2.0",
]
